--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="processing-container" id="processing-container">
     <p>Procesando su compra <span id="loading-dots">...</span></p>
     <p id="purchase-status" class="hidden">Compra realizada con éxito, pago pendiente 💕</p>
-    <p id="love-message" class="hidden">Te amo ❤️</p> <!-- Aquí agregamos el mensaje de amor -->
+    <p id="love-message" class="hidden">Te amo ❤️</p>
 </div>
 
     <script>
