--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 
     <div class="processing-container" id="processing-container">
         <p>Procesando su compra <span id="loading-dots">...</span></p>
-        <p id="purchase-status" class="hidden">Compra realizada con éxito, pago pendiente 💕</p>
-        <p id="love-message" class="hidden">Te amo ❤️</p>
+        <p id="purchase-status" class="hidden">Compra realizada con éxito, pago pendiente 💕<br><br>
+        Te amo ❤️<br>
+        </p>
     </div>
 
     <script>
