--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             color: white;
             transition: 0.3s;
             position: absolute;
-            right: 10%; /* Mueve el botón al lado derecho */
-            bottom: 10%; /* Asegura que el botón esté un poco más abajo */
+            right: 10px; /* Posiciona el botón a la derecha */
+            bottom: 20px; /* Colócalo un poco más arriba para que no se pierda en la pantalla */
         }
         #nextBtn:hover {
             background-color: #218838;
