--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             transition: transform 0.3s;
         }
         #nextBtn {
-            margin-top: 20px;
             padding: 12px 25px;
             font-size: 18px;
             cursor: pointer;
@@ -49,8 +48,9 @@
             color: white;
             transition: 0.3s;
             position: absolute;
-            right: 10px; /* Posiciona el botón a la derecha */
-            bottom: 20px; /* Colócalo un poco más arriba para que no se pierda en la pantalla */
+            left: 50%; /* Centramos el botón */
+            transform: translateX(-50%); /* Centra el botón perfectamente */
+            bottom: 40px; /* Colocamos el botón bastante abajo */
         }
         #nextBtn:hover {
             background-color: #218838;
